--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>bb elements style guide</title>
+		<title>Crodity elements</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<div id="app"></div>
-	<script type="text/javascript" src="build/bundle.b464b38a.js"></script></body>
+	<script type="text/javascript" src="build/bundle.6fe06a45.js"></script></body>
 </html>
